[package]
name = "snake_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-multipart = "0.6.1"
json = "0.12.4"
serde = { version = "1.0.196", features = ["derive"] }
surrealdb = "1.1.1"
uuid = "1.7.0"
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.77"
env_logger = "0.11.1"
log = "0.4.20"
derive_more = "0.99.17"
mime = "0.3.17"
futures-lite = "2.2.0"
tokio = "1.36.0"
